--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(untitled)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(untitled main.cpp algorithms/LeetCode/1_Two_Sum/1_Two_Sum-1.cpp algorithms/LeetCode/2_Add_Two_Numbers/main.cpp algorithms/LeetCode/7_Reverse_Integer/main.cpp)
+add_executable(untitled main.cpp )
